[package]
name = "tblgen"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings for TableGen."
repository = "https://gitlab.com/Danacus/tblgen-rs"
documentation = "https://danacus.gitlab.io/tblgen-rs/tblgen/"
exclude = ["doc/"]

[features]
default = ["llvm16-0"]
llvm16-0 = []
llvm17-0 = []

[dependencies]
thiserror = "1"
paste = "1"

[build-dependencies]
bindgen = "0.66"
cc = "1.0"
