[package]
name = "tblgen-alt"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daan Vanoverloop"]
description = "Safe Rust bindings for TableGen. Alternative updated version."
repository = "https://github.com/edg-l/tblgen-rs-alt"
documentation = "https://danacus.gitlab.io/tblgen-rs/tblgen/"
exclude = ["doc/"]

[features]
default = ["llvm18-0"]
llvm16-0 = []
llvm17-0 = []
llvm18-0 = []

[dependencies]
thiserror = "1"
paste = "1"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0"
