[package]
name = "tblgen-alt"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daan Vanoverloop"]
description = "Safe Rust bindings for TableGen. Alternative updated version."
repository = "https://github.com/edg-l/tblgen-rs-alt"
keywords = ["llvm", "tablegen", "bindings", "wrapper"]
categories = ["development-tools::ffi"]
documentation = "https://danacus.gitlab.io/tblgen-rs/tblgen/"
exclude = ["doc/"]

[features]
default = ["llvm19-0"]
llvm16-0 = []
llvm17-0 = []
llvm18-0 = []
llvm19-0 = []

[dependencies]
thiserror = "1.0.61"
paste = "1.0.15"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.98"
